fix: add Safari flexbox gap fallbacks for project-specific elements

--- a/css/queries.css
+++ b/css/queries.css
@@ -371,3 +371,48 @@
 /**************************/
 /* Fixing Safari flexbox gap*/
 /**************************/
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+   margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .tech-tags span:not(:last-child) {
+   margin-right: 1.4rem;
+}
+
+.no-flexbox-gap .tech-attributes li:not(:last-child),
+.no-flexbox-gap .list li:not(:last-child) {
+   margin-bottom: 1.2rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+   margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+   margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+   margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+   margin-bottom: 2.4rem;
+}
+
+.no-flexbox-gap .contacts p:not(:last-child) {
+   margin-bottom: 1.2rem;
+}
+
+@media (max-width: 75em) {
+   .no-flexbox-gap .main-nav-list li:not(:last-child) {
+      margin-right: 3.2rem;
+   }
+}
+
+@media (max-width: 62em) {
+   .no-flexbox-gap .main-nav-list li:not(:last-child) {
+      margin-right: 0;
+      margin-bottom: 6.2rem;
+   }
+}
